--- a/app/templates/buscar.html
+++ b/app/templates/buscar.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} INFITY LIBRARY {% endblock %}
+{% block title %} Buscar {% endblock %}
 {% block content %}
 
 <div id="search">
