--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,22 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.css') }}">
     <title>{% block title %}Infinite Libary{% endblock %}</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <a href="{{ url_for('home.index') }}">
-                <li class="nav-element">INICIO</li>
-            </a><a href="{{ url_for('search.buscar') }}">
-                <li class="nav-element">BUSCAR</li>
-            </a><a href="{{ url_for('library.biblioteca') }}">
-                <li class="nav-element">BIBLIOTECA</li>
-            </a><a href="#">
-                <li class="nav-element">OPCIONES</li>
-            </a>
-        </ul>
-    </nav>
-    {% block content %}{% endblock %}
+    <header>
+        <nav>
+            <ul>
+                <a href="{{ url_for('home.index') }}">
+                    <li class="nav-element">INICIO</li>
+                </a><a href="{{ url_for('search.buscar') }}">
+                    <li class="nav-element">BUSCAR</li>
+                </a><a href="{{ url_for('library.biblioteca') }}">
+                    <li class="nav-element">BIBLIOTECA</li>
+                </a><a href="#">
+                    <li class="nav-element">OPCIONES</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        {% block content %}{% endblock %}
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
