--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -2,7 +2,7 @@
 {% block title %} Error {% endblock %}
 {% block content %}
 
-<h1>Ha occurrido un error</h1>
-<h3>{{ e }}</h3>
+<h1 id="error_title">Ha occurrido un error</h1>
+<h3 id="error_content">{{ e }}</h3>
 
 {% endblock %}
