--- a/app/templates/buscar.html
+++ b/app/templates/buscar.html
@@ -17,7 +17,7 @@
 {% if resultados %}
     <div id="catalog">
         {% for item in resultados %}
-            <a id="card" href="{{ url_for('media.guardar_media', media_id=item.id_api) }}">
+            <a id="card" href="{{ url_for('media.guardar', media_id=item.id_api) }}">
                 <img class="img_gallery" src="{{ item.portada }}" alt="{{ item.titulo }}">
                 <div class="card-info">
                     <h3>{{ item.titulo }}</h3>
