--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -613,3 +613,121 @@ footer {
 .error-back:hover {
     color: #ffffff;
 }
+
+/* Inicio de sesion */
+
+/* --- Pantalla de Login --- */
+
+.login-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 80vh; /* Centra el login verticalmente en la pantalla */
+    padding: 20px;
+}
+
+.login-box {
+    background-color: #1a1a1a;
+    padding: 3rem;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 450px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+    border: 1px solid #333;
+}
+
+.login-box h1 {
+    font-size: 2rem;
+    color: #fff;
+    margin-bottom: 2rem;
+    font-weight: 700;
+}
+
+.login-error {
+    background: rgba(229, 9, 20, 0.15);
+    color: #ff4d4d;
+    padding: 1rem;
+    border-radius: 5px;
+    border-left: 4px solid #e50914;
+    margin-bottom: 1.5rem;
+    font-size: 0.9rem;
+}
+
+/* Estilos del Formulario */
+.login-form div {
+    margin-bottom: 5px;
+}
+
+.login-form label {
+    display: block;
+    font-size: 0.9rem;
+    color: #b3b3b3;
+    margin-bottom: 8px;
+    font-weight: 600;
+}
+
+.login-form input {
+    width: 100%;
+    background: #333;
+    border: none;
+    border-bottom: 2px solid transparent;
+    padding: 1rem;
+    border-radius: 5px;
+    color: white;
+    font-size: 1rem;
+    outline: none;
+    transition: all 0.3s ease;
+}
+
+.login-form input:focus {
+    background: #454545;
+    border-bottom-color: #e50914; /* Línea roja al enfocar */
+}
+
+/* Botón de Entrada */
+.login-form button {
+    width: 100%;
+    background: #e50914;
+    color: white;
+    border: none;
+    padding: 1rem;
+    border-radius: 5px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 1.5rem;
+    transition: background 0.3s ease, transform 0.1s ease;
+}
+
+.login-form button:hover {
+    background: #ff0a16;
+}
+
+.login-form button:active {
+    transform: scale(0.98); /* Efecto de pulsación */
+}
+
+/* Ajustes para pantallas pequeñas */
+@media (max-width: 480px) {
+    .login-box {
+        padding: 2rem 1.5rem;
+    }
+}
+
+.btn-logout {
+    background-color: #0d0d0d;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-logout {
+    background-color: #b20710;
+}
+
+
+
