--- a/app/templates/buscar.html
+++ b/app/templates/buscar.html
@@ -14,6 +14,12 @@
     </form>
 </div>
 
+{% if e %}
+	<p class="insert-error">
+		{{ e }}
+    </p>
+{% endif %}
+
 {% if resultados %}
     <div id="catalog">
         {% for item in resultados %}
